# slater_stoch

./: .gitignore  AUTHORS  Makefile.am  README.md  VB0  VB1  autogen.sh  clean_Vee.py  configure.ac  h2.xyz  input_games_VB0  input_games_VB1  j.f90  j_in  k.f90  one_e_slater.f90  run  two_e_slater.f90
example/: h2o.xyz  j_in
m4/: ax_prog_fc_mpi.m4
src/: .gitignore  I_x1_new.f90  I_x1_pol_mult.F90  I_x1_pol_mult_a1.F90  I_x1_pol_mult_a2.F90  I_x1_pol_mult_mono_elec.f90  I_x1_pol_mult_recurs.F90  I_x1_pol_mult_recurs.f90  I_x2_new.F90  I_x2_pol_mult.F90  I_x2_pol_mult_mono_elec.f90  Makefile  NAI_pol_mult.f90  add_poly.F90  add_poly_multiply.f90  allocate_basis.F90  bielec_integral.f90  bigF.F90  binom.F90  binom.f90  binom_func.F90  binom_func.f90  binom_transp.F90  build_c_g_gauss_STO.F90  build_c_g_gauss_STO.f90  build_gaussian_expansion_of_orbitals.F90  build_gaussian_expansion_of_orbitals.f90  build_mapping_ijkl.F90  chi2.F90  chi2.f90  common_data.F90  compare_nuclei.F90  compare_nuclei.f90  compute_densities.F90  compute_densities.f90  compute_int_slater.F90  compute_jacobian_and_pi0.F90  compute_lmin_lmax.f90  compute_r_tilde.F90  compute_u_tilde.f90  (+71 more)
